--- a/style.css
+++ b/style.css
@@ -6,8 +6,12 @@ FONT SIZE SYSTEM (px)
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98
 */
 
+/* 
+Main color : #087f5b  
+*/
+
 * {
-  margin: 0;
+  margin: 0px;
   padding: 0;
   box-sizing: border-box;
 }
@@ -16,7 +20,9 @@ FONT SIZE SYSTEM (px)
 /* GENERAL STYLES */
 /* ------------------------ */
 body {
-  font-family: sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
+  color: #343a40;
+  border-bottom: 8px solid #087f5b;
 }
 
 .container {
@@ -31,6 +37,9 @@ section {
 
 h2 {
   margin-bottom: 48px;
+  font-size: 36px;
+  letter-spacing: -0.5px;
+  /* 24 / 30 / 36  */
 }
 
 .grid-3-cols {
@@ -57,10 +66,41 @@ header {
 
 h1 {
   margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 52px;
+  line-height: 1.1;
+  letter-spacing: -1px;
+  /* 44 / 52 / 62 */
 }
 
 .header-text {
   margin-bottom: 24px;
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+.btn:link,
+.btn:visited {
+  background-color: #087f5b;
+  color: #fff;
+  font-weight: 500;
+  text-decoration: none;
+  text-transform: uppercase;
+
+  display: inline-block;
+}
+.btn:hover,
+.btn:active {
+  background-color: #099268;
+}
+
+.btn--big {
+  padding: 16px 32px;
+  font-size: 18px;
+}
+.btn--small {
+  padding: 8px 17px;
+  font-size: 16px;
 }
 
 img {
@@ -69,17 +109,27 @@ img {
 
 /* FEATURES */
 .features-icon {
+  stroke: #087f5b;
+  width: 36px;
+  height: 36px;
+  margin-bottom: 12px;
 }
 
 .features-title {
   margin-bottom: 16px;
+  font-size: 25px;
 }
 
 .features-text {
+  font-size: 18px;
+  line-height: 1.5;
 }
 
 /* TESTIMONIAL */
 .testimonial-section {
+  background-color: #087f5b;
+  color: #f8f9fa;
+  padding: 24px;
 }
 
 .testimonial-box {
@@ -89,11 +139,14 @@ img {
 
 .testimonial-box h2 {
   margin-bottom: 24px;
+  font-size: 30px;
 }
 
 .testimonial-text {
   font-style: italic;
   margin-bottom: 24px;
+  font-size: 20px;
+  line-height: 1.5;
 }
 
 /* CHAIRS */
@@ -103,6 +156,7 @@ img {
 
 h3 {
   margin-bottom: 24px;
+  font-size: 20px;
 }
 
 .chair-details {
@@ -122,13 +176,18 @@ h3 {
 }
 
 .chair-icon {
+  stroke: #087f5b;
+  width: 24px;
+  height: 24px;
 }
 
 .chair-price {
   display: flex;
   justify-content: space-between;
+  font-size: 20px;
 }
 
 footer {
   margin-bottom: 48px;
+  color: #343a40;
 }
