--- a/style.css
+++ b/style.css
@@ -97,14 +97,17 @@ h1 {
 .btn--big {
   padding: 16px 32px;
   font-size: 18px;
+  border-radius: 32px;
 }
 .btn--small {
   padding: 8px 17px;
   font-size: 16px;
+  border-radius: 32px;
 }
 
 img {
   width: 100%;
+  border-radius: 12px;
 }
 
 /* FEATURES */
@@ -130,6 +133,7 @@ img {
   background-color: #087f5b;
   color: #f8f9fa;
   padding: 24px;
+  border-radius: 12px;
 }
 
 .testimonial-box {
@@ -161,6 +165,15 @@ h3 {
 
 /* li {
 } */
+
+.chair {
+  box-shadow: 0 20px 20px 20px rgba(0, 0, 0, 0.1);
+  border-radius: 12px;
+}
+.chair img {
+  border-bottom-left-radius: 0px;
+  border-bottom-right-radius: 0px;
+}
 
 .chair-details {
   list-style: none;
