--- a/style.css
+++ b/style.css
@@ -167,7 +167,7 @@ h3 {
 } */
 
 .chair {
-  box-shadow: 0 20px 20px 20px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 15px 20px 20px rgba(0, 0, 0, 0.03);
   border-radius: 12px;
 }
 .chair img {
